--- a/Page1.html
+++ b/Page1.html
@@ -122,11 +122,11 @@ left: 330px;}
                 <source src="piano.wav">
             </audio>
             <hr>
-            <p> Hi! My name is Sabella Volansky. I'm from New Milford, Connecticut. I'm a Dance Science
+            <p> Hi! My name is Sabella Volansky. I'm from New Milford, Connecticut. I'm a sophomore Dance Science
                 and Cinema and Television Arts double major at <a href=https://www.elon.edu/ target="_blank"> Elon University</a>.
-                I'm also in the Accelerated Pathways Program for Physical Therapy here at Elon. This is a 3.5 year undergrad program that goes straight in to 3 more years of
+                I'm also in the Accelerated Pathways Program for Physical Therapy here at Elon. This is a 3.5 year undergrad program that goes straight into 3 more years of
                 grad school to get at phD.<br><br>I have been dancing since I was two years old but had scoliosis. I eventually got this corrected, and went through Physical Therapy to get back to dancing.
-                I realized that I wanted to help othr kids get back to doing what they love and I decided to become a Physical Therapist. I added the Cinema and Television Arts major last semester because
+                I realized that I wanted to help other kids get back to doing what they love and I decided to become a Physical Therapist. I added the Cinema and Television Arts major last semester because
                 I realized that I also really like writing so I decided to work on those skills in my time in undergrad as well.
             </p>
         </div>
@@ -134,8 +134,8 @@ left: 330px;}
             <h1> Dance</h1>
             <hr>
             <img src="Images/Freshman Year Dance Photo.JPG" height="200px">
-            <p> I danced for 15 years at a studio called Dance Dimensions and am continuing my dance journey here in college. I competed in dance competitions from the age of seven until the end of my senior year.
-                My favorite style is tap, but I am also trained in ballet, modern, contemporary, hip hop and jazz. I assisted in teaching at the age of thirteen and by my senior year in high school, I was able
+            <p> I danced for 15 years at a studio called Dance Dimensions and am continuing my dance journey here in college. I competed in dance competitions from the age of seven until the end of my senior year of high school.
+                My favorite style is tap, but I am also trained in ballet, modern, contemporary, hip hop and jazz. I assisted in teaching dance at the age of thirteen and by my senior year of high school, I was able
                 to teach classes on my own.
             </p>
         </div>
