--- a/Page2.html
+++ b/Page2.html
@@ -117,8 +117,8 @@ left: 330px;}
         <p> I have a few professional experiences in many different areas. Currently, I have an on campus job at the Costume Shop. There, I alter costumes, add details to costumes, quick rig costumes
             and oragnize things around the shop. We make costumes for most of the Performing Arts events. I also run a small business with my friend. We're an art business called Radiant Universe. We make
             handmade jewlery and decor and sell them at pop ups held by <a href="https://oak-originals.com/" target="_blank">Oak Originals</a>. <br><br>
-            I also am Vice President of DanceWorks which is a student run dance club on campus. I also have experience with teaching dance classes. I taught classes at my old studio back in Connecticut
-            and I am currently keeping up my skills and teaching classes here in College. <br> <br> I also have done a lot of shadowing hours for Physical Therapy and
+            I also am Vice President of DanceWorks which is a student run dance club on campus. I have experience with teaching dance classes. I taught classes at my old studio back in Connecticut
+            and I am currently keeping up my skills and teaching classes here in college. <br> <br> I also have done a lot of shadowing hours for Physical Therapy and
             have learned a lot. I just started my Cinema and Television Arts major, so I don't really have work experience for that part of my professional life yet. </p>
             <img src="Images/RadiantUniverse.jpg">
            
@@ -128,7 +128,7 @@ left: 330px;}
         <hr>
         <p>I'm not exactly sure what I want to do in the future. I know that I want to work with children in the Physical Therapy realm, most likely in an inpatient care facility. I also know I want to write stories
             hopefully for TV. There's also a part of me that wants to teach at a dance studio. I know that this is a lot of things to do in the future, but I want to figure out a way
-            to do it all. Maybe someday I'll get to do choreography. Below is a video of me teaching a class here in college.
+            to do it all! Maybe someday I'll get to do choreography. Below is a video of me teaching a class here in college.
         </p>
         <br>
         <br>
